--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 # Default ignored files
 /shelf/
-/out/
 
-/.idea/GitLink.xml
-/.idea/Ella Resume 12-20-22.iml
-/.idea/workspace.xml
-/auxil/
-/out/sample.synctex.gz
-/out/sample.pdf
-/nicethings_icons_readme.txt
+/sample.aux
+/sample.log
+/sample.out
+/sample.synctex.gz
+/sample.pdf
+/pdfa.xmpi
