--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 # Default ignored files
 /shelf/
-<<<<<<< HEAD
-
-/sample.aux
-/sample.log
-/sample.out
-/sample.synctex.gz
-/sample.pdf
-/pdfa.xmpi
+/out/
